--- a/ass5_meminfo/Makefile
+++ b/ass5_meminfo/Makefile
@@ -1,3 +1,12 @@
+SRC := loader.S
+BIN := $(subst .S,.bin, $(SRC))
+
+$(BIN) : $(SRC)
+	nasm $< -o $@
+
+##############################################
+#  Install Bootloader and Load Kernel Image  #
+##############################################
 .PHONY: install
 
 install:
@@ -19,3 +28,8 @@ remove:
 	rm *.img
 	rm *.bin
 	rm *.elf
+
+.PHONY: dump
+
+dump:
+	objdump -D loader.bin
