--- a/os_krnl/Makefile
+++ b/os_krnl/Makefile
@@ -1,27 +1,44 @@
-SRC := loader.S
-BIN := $(subst .S,.bin, $(SRC))
+#############################################
+#                 MakeFile                  #
+#############################################
+BOOT_SRC := boot.S
+LOAD_SRC := loader.S
+KERN_SRC := kernel.S
 
-$(BIN) : $(SRC)
-	nasm $< -o $@
+BOOT_BIN := $(subst .S,.bin, $(BOOT_SRC))
+LOAD_BIN := $(subst .S,.bin, $(LOAD_SRC))
+KERN_BIN := $(subst .S,.bin, $(KERN_SRC))
+
+DISK     := a.img
 
 ##############################################
 #  Install Bootloader and Load Kernel Image  #
 ##############################################
-.PHONY: install
+.PHONY: all
 
+all: $(BOOT_BIN) 
+
+$(BOOT_BIN): $(BOOT_SRC)
+	nasm $< -o $@
+
+#$(LOAD_BIN): $(LOAD_SRC)
+#	nasm $< -o $@
+
+#$(KERN_BIN): $(KERN_SRC)
+#	nasm -f elf32 $< -o $@
+
+.PHONY: install
 install:
+	dd if=boot.bin of=$(DISK) bs=512 count=1 conv=notrunc
 	sudo mount a.img -o loop /mnt/floppy
-	sudo cp loader.bin /mnt/floppy
+	#sudo cp loader.bin /mnt/floppy
+	#sudo cp kernel.bin /mnt/floppy
 	sudo umount /mnt/floppy
 
 	bochs -f bochsrc
 
-.PHONY: uninstall
-
 uninstall:
 	sudo umount /mnt/floppy
-
-.PHONY: remove
 
 remove:
 	rm *.o 
@@ -29,7 +46,6 @@ remove:
 	rm *.bin
 	rm *.elf
 
-.PHONY: dump
-
 dump:
 	objdump -D loader.bin
+
